  * Droping patches/backports that are already upstream in DPDK 16.07-rc3
    - d/p/ubuntu-fix-bond-symbol-export.patch
    - d/p/ubuntu-backport-33-vhost-user-add-error-handling-for-fd-1023.patch
  * Update debian/*.symbols to reflect the 16.07-rc3 changes
  * debian/rules:
    - Allow all make commands to be verbose
    - Fix libdpdk-dev headers path

 -- Ricardo Salveti de Araujo <rsalveti@rsalveti.net>  Mon, 18 Jul 2016 15:53:37 -0300

dpdk (16.04-1) UNRELEASED; urgency=medium

  [ Christian Ehrhardt ]
  * Merge with upstream DPDK 16.04 release
  * droping patches/backports that are already upstream in DPDK 16.04
    - d/p/ubuntu-fix-doc-installpath.patch
    - d/p/ubuntu-fix-testpmd-without-xen.patch
    - d/p/ubuntu-fix-lpm-use-after-free-and-leak.patch
    - d/p/ubuntu-backport-[01-32,34-35] backports for stability
    - d/p/ubuntu-backport-[36-37] but keep doc and example changes in d/*
  * droping patches for soname / linking fixups.
    - Upstream now goes with proper soname/abi/api handling per sublib plus a
      linker script.
    - dropped d/p/ubuntu-combined-shared-lib-abiversion.patch
    - dropped d/p/ubuntu-fix-library-linkage.patch
  * keeping patches:
    - d/p/ubuntu-backport-38-* fix for memory leak
      this now applies as is, so changed from a modified backport to match the
      post 16.04 upstream commit now.
    - d/p/ubuntu-backport-33-vhost-user-add-error-handling-for-fd-1023.patch
    - doc and example changes that were related to d/p/ubuntu-backport-[36-37]
    - d/p/ubuntu-fix-vhost-user-socket-permission.patch adapted for dpdk-16.04:
      In the new build system with sublibs the exposed function needs to be
      listed in lib/librte_eal/linuxapp/eal/rte_eal_version.map
  * adding upstream backports - can be dropped when merging DPDK 16.07.
    - d/p/ubuntu-backport-39-lpm-fix-freeing-in-compatibility-mode.patch
      This was formerly part of a combined patch that we dropped because the