@@ -1,0 +1,2 @@
+librte_pmd_e1000.so.1 librte-pmd-e1000-1 #MINVER#
+ DPDK_2.0@DPDK_2.0 16.04
