@@ -39,6 +39,8 @@ dpdk (16.07-rc3-1) UNRELEASED; urgency=medium
   * debian/rules:
     - Allow all make commands to be verbose
     - Fix libdpdk-dev headers path
+  * Renaming package librte-pmd-e10001 to librte-pmd-e1000-1, to avoid mixing
+    package name with soversion (lintian package-name-doesnt-match-sonames)
 
  -- Ricardo Salveti de Araujo <rsalveti@rsalveti.net>  Mon, 18 Jul 2016 15:53:37 -0300
 
